--- a/DayCare/DayCare/Views/Children/ChildDetailView.xaml
+++ b/DayCare/DayCare/Views/Children/ChildDetailView.xaml
@@ -32,7 +32,8 @@
 
 		<TextBox Text="{Binding FirstName}" Grid.Column="2" Style="{DynamicResource TextBoxStyle}" Margin="4" MinWidth="200"/>
 		<TextBox Text="{Binding LastName}" Grid.Column="2" Grid.Row="1" Style="{DynamicResource TextBoxStyle}" Margin="4" MinWidth="200"/>
-		<DatePicker SelectedDate="{Binding BirthDay}" Grid.Column="2" Grid.Row="2" VerticalAlignment="Center" FirstDayOfWeek="Monday" FontFamily="Calibri" FontSize="18" Margin="4,0"/>
+		<DatePicker SelectedDate="{Binding BirthDay}" Grid.Column="2" Grid.Row="2" VerticalAlignment="Center" FirstDayOfWeek="Monday" FontFamily="Calibri" FontSize="18" Margin="4,0"
+								CalendarStyle="{StaticResource LargeCalendarStyle}"/>
 		
 		<StackPanel Grid.Row="3" Grid.Column="3" Orientation="Vertical" >
 			<Button x:Name="SelectImageAction" Content="Selecteer" Style="{DynamicResource ButtonStyle}" Height="24" Margin="2" 
