--- a/DayCare/DayCare/Views/Dialogs/PasswordDialogView.xaml
+++ b/DayCare/DayCare/Views/Dialogs/PasswordDialogView.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="600" d:DesignWidth="300">
 	<Grid>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="1*"/>
@@ -13,17 +13,46 @@
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="*"/>
 			<RowDefinition Height="Auto"/>
 		</Grid.RowDefinitions>
 
 		<TextBlock Text="Geef de code in:" TextWrapping="Wrap" Style="{DynamicResource LabelStyle}" Margin="10"  Grid.ColumnSpan="2"/>
 		<TextBlock Text="Code:" TextWrapping="Wrap" Style="{DynamicResource LabelStyle}" Margin="10"  Grid.Row="1"/>
-		<TextBox Text="{Binding VerifyCode}" Margin="10" Grid.Row="1" Grid.Column="1" FontSize="24" FontWeight="Bold"/>
+		<TextBlock Text="{Binding VerifyCode}"  Margin="10" Grid.Row="1" Grid.Column="1" FontSize="36" FontWeight="Bold"/>
 
-		<StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Grid.ColumnSpan="2">
+		<Grid Grid.Row="2" Grid.ColumnSpan="2" Margin="10" HorizontalAlignment="Center">
+			<Grid.RowDefinitions>
+				<RowDefinition Height="50"/>
+				<RowDefinition Height="50"/>
+				<RowDefinition Height="50"/>
+				<RowDefinition Height="50"/>
+			</Grid.RowDefinitions>
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="60"/>
+				<ColumnDefinition Width="60"/>
+				<ColumnDefinition Width="60"/>
+			</Grid.ColumnDefinitions>
+
+			<Button Name="OneAction" Content="1" Style="{DynamicResource ButtonStyle}" MinWidth="35" MinHeight="35" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+			<Button Name="TwoAction" Content="2" Style="{DynamicResource ButtonStyle}" MinWidth="35" MinHeight="35" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+			<Button Name="ThreeAction" Content="3" Style="{DynamicResource ButtonStyle}" MinWidth="35" MinHeight="35" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+
+			<Button Name="FourAction" Content="4" Style="{DynamicResource ButtonStyle}" MinWidth="35" MinHeight="35" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+			<Button Name="FiveAction" Content="5" Style="{DynamicResource ButtonStyle}" MinWidth="35" MinHeight="35" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+			<Button Name="SixAction" Content="6" Style="{DynamicResource ButtonStyle}" MinWidth="35" MinHeight="35" Grid.Row="1" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+
+			<Button Name="SevenAction" Content="7" Style="{DynamicResource ButtonStyle}" MinWidth="35" MinHeight="35" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+			<Button Name="EightAction" Content="8" Style="{DynamicResource ButtonStyle}" MinWidth="35" MinHeight="35" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+			<Button Name="NineAction" Content="9" Style="{DynamicResource ButtonStyle}" MinWidth="35" MinHeight="35" Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+
+			<Button Name="ZeroAction" Content="0" Style="{DynamicResource ButtonStyle}" MinWidth="35" MinHeight="35" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+			<Button Name="DelAction" Content="Wis" Style="{DynamicResource ButtonStyle}" MinWidth="50" MinHeight="35" Grid.Row="3" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+		</Grid>
+
+		<StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right" Grid.ColumnSpan="2">
 			<Button x:Name="YesAction" Content="Ja" Style="{DynamicResource ButtonStyle}" Height="30" MinWidth="75" Margin="5,0"/>
 			<Button x:Name="NoAction" Content="Nee" Style="{DynamicResource ButtonStyle}" Height="30" MinWidth="75" Margin="5,0"/>
 		</StackPanel>
-
 	</Grid>
 </UserControl>
