--- a/DayCare/DayCare/Views/Scheduler/AddScheduleView.xaml
+++ b/DayCare/DayCare/Views/Scheduler/AddScheduleView.xaml
@@ -48,25 +48,26 @@
 				<Button Content="3 weken" x:Name="ThreeWeekAction" HorizontalAlignment="Left" Style="{DynamicResource ButtonStyle}" Height="26" Width="80" Margin="5"/>
 				<Button Content="4 weken" x:Name="FourWeekAction" HorizontalAlignment="Left" Style="{DynamicResource ButtonStyle}" Height="26" Width="80" Margin="5"/>
 			</StackPanel>
+			<ScrollViewer Grid.Row="1" MaxHeight="460">
+				<ItemsControl ItemsSource="{Binding Details}"  >
+					<ItemsControl.ItemsPanel>
+						<ItemsPanelTemplate>
+							<StackPanel />
+						</ItemsPanelTemplate>
+					</ItemsControl.ItemsPanel>
+					<ItemsControl.ItemTemplate>
+						<DataTemplate>
+							<GroupBox Margin="0,5">
+								<GroupBox.Header>
+									<TextBlock Text="{Binding Header}" />
+								</GroupBox.Header>
 
-			<ItemsControl ItemsSource="{Binding Details}" Grid.Row="1" >
-				<ItemsControl.ItemsPanel>
-					<ItemsPanelTemplate>
-						<StackPanel />
-					</ItemsPanelTemplate>
-				</ItemsControl.ItemsPanel>
-				<ItemsControl.ItemTemplate>
-					<DataTemplate>
-						<GroupBox Margin="0,5">
-							<GroupBox.Header>
-								<TextBlock Text="{Binding Header}" />
-							</GroupBox.Header>
-							
-							<ContentControl cal:View.Model="{Binding .}" VerticalAlignment="Stretch" Margin="5"/>
-						</GroupBox>
-					</DataTemplate>
-				</ItemsControl.ItemTemplate>
-			</ItemsControl>
+								<ContentControl cal:View.Model="{Binding .}" VerticalAlignment="Stretch" Margin="5"/>
+							</GroupBox>
+						</DataTemplate>
+					</ItemsControl.ItemTemplate>
+				</ItemsControl>
+			</ScrollViewer>
 		</Grid>
 
 		<StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
